part3/3.02/manifests/ping-pong/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-service
  namespace: pingpong-log
spec:
  type: NodePort
  selector:
    app: ping-pong
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
