part3/3.02/manifests/ping-pong/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-ingress
  namespace: pingpong-log
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pingpong-service
            port:
              number: 3000
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-service
            port:
              number: 3000
      - path: /getpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-service
            port:
              number: 3000
